output transaksi paket agen

--- a/src/output/templates/invoice-header.hbs
+++ b/src/output/templates/invoice-header.hbs
@@ -30,15 +30,19 @@
       </td>
       <td valign="bottom">{{ tgl }}</td>
     </tr>
+
     <tr>
       <td align="right" style="
         font-weight: lighter;
         padding-right: 12px;
         vertical-align: top;
       ">
+        {{#if jenis}}
         Jenis
+        {{/if}}
       </td>
       <td valign="top">{{ jenis }}</td>
     </tr>
+
   </tbody>
 </table>
