--- a/src/output/templates/invoice.hbs
+++ b/src/output/templates/invoice.hbs
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <link rel="stylesheet" href="http://localhost:3001/css/style.css" />
+  <link rel="stylesheet" href="{{ baseUrl }}/css/style.css" />
 
   <script src="https://kit.fontawesome.com/ab04eba8e8.js" crossorigin="anonymous"></script>
 
@@ -47,7 +47,11 @@
 
   {{> @partial-block }}
 
+  {{#if kategori}}
+  &nbsp;
+  {{else}}
   {{> footer }}
+  {{/if}}
 </body>
 
 </html>
