fix fontAwesome error

--- a/templates/invoice-header.hbs
+++ b/templates/invoice-header.hbs
@@ -9,11 +9,11 @@
         <p style="font-size: 12pt; margin: 0 0 10px 0;">
           {{ periode.referensi.judul }}
         </p>
-        <i class="fas fa-home" style="margin-right: 3px; margin-left: -1px;"></i>
+        <i class="fa fa-home" style="margin-right: 3px; margin-left: -1px;"></i>
         {{ periode.referensi.alamat }} <br />
-        <i class="fab fa-whatsapp" style="margin-right: 4px;"></i>
+        <i class="fa fa-whatsapp" style="margin-right: 4px;"></i>
         {{ periode.referensi.noHp }} <br />
-        <i class="fab fa-instagram" style="margin-right: 4px;"></i>
+        <i class="fa fa-instagram" style="margin-right: 4px;"></i>
         {{ periode.referensi.ig }}
       </td>
       <td colspan="2" align="center" valign="top" style="font-size: 16pt; font-weight: lighter; height: 28px;">
