--- a/templates/invoice.hbs
+++ b/templates/invoice.hbs
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="{{ baseUrl }}/css/style.css" />
 
-  <script src="https://kit.fontawesome.com/ab04eba8e8.js" crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/dcbe713288.js"></script>
 
   <style>
     body {
